--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                     <div class="col-lg-12 col-md-12 col-sm-12 pt-5">
                         <h2 class="contactTitle hidden text-center">Interested in a free consultation?</h2>
                         <p class="contactSub hidden text-center">Fill out the form below or sign up for a date on our Calendly and one of our team members will get back with you as soon as possible!</p>
-                        <form class="pb-5">
+                        <form class="pb-5" data-netlify="true">
                             <label for="name">Name</label>
                             <input type="text" id="name" name="name" placeholder="Name">
                             <label for="email">Email</label>
