--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="styles.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="/Assets/spfavicon.png"/>
     <title>Safeplay Development</title>
 </head>
 <body>
