--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </div>
 
                     <div class="col-lg-6 col-md-6 col-sm-12">
-                        <p class="servicesText hidden">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer convallis mi sed bibendum scelerisque. In id lectus sit amet tellus luctus pulvinar sit amet id velit. Vestibulum purus ex, pellentesque</p>
+                        <p class="servicesText hidden">Our team of skillfull developers build unique and memorable web experiences. Whether you need a basic informational site or a full stack application, we got you covered.</p>
                     </div>
                 </div>
 
