--- a/services.html
+++ b/services.html
@@ -30,7 +30,7 @@
         </div>
         <nav class="navbar navbar-expand-lg nav-bg-color">
             <div class="container">
-                <a href="#" class="navbar-brand brand-title">
+                <a href="/" class="navbar-brand brand-title">
                     <img class="img-fluid" src="Assets/splogofinaltwo.png" style="max-width: 250px;">
                 </a>
 
