--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                         <div class="testimonialCard1 d-flex justify-content-start align-items-center mt-5" id="sp">
                             <img src="Assets/sptest.png" alt="" class="img-fluid testimonialImg1">
                             <div class="nameTitleHolder">
-                                <p class="testName">Max</p>
+                                <p class="testName">Arby</p>
                                 <p class="testPos">CTO, Safeplay Investments</p>
                             </div>
                         </div>
